# rules-engine-poc

./: .Dockerfile  .gitignore  Dockerfile  README.md  convert.py  docker-compose.yml  log.txt  main.py  no_log_output.txt  pyproject.toml  test.csv
db/: Dockerfile
ingress/: Dockerfile  README.md  db.py  main.py  models.py  pyproject.toml  queue.py  run.sh  stop.sh  test_main.py
ingress/db/: db.py
ingress/models/: models.py
rules/: test.yaml
worker/: .dockerignore  Dockerfile  README.md  pyproject.toml  worker.py
